default skip_proof to false in config

--- a/dna.yaml
+++ b/dna.yaml
@@ -3,7 +3,7 @@ manifest_version: "1"
 name: test-dna
 uuid: 9a28aac8-337c-11eb-adc1-0Z02acw20115
 properties: 
-  skip_proof: true
+  skip_proof: false
 zomes:
   - name: test
     bundled: "target/wasm32-unknown-unknown/release/test.wasm"
