--- a/zomes/test/Cargo.toml
+++ b/zomes/test/Cargo.toml
@@ -9,7 +9,7 @@ name = "test"
 crate-type = [ "cdylib", "rlib" ]
 
 [dependencies]
-hdk = "0.0.122"
+hdk = "=0.0.123"
 serde = "1.0.104"
 thiserror = "1.0.22"
 paste = "1.0.5"
