--- a/zomes/test/Cargo.toml
+++ b/zomes/test/Cargo.toml
@@ -2,7 +2,7 @@
 name = "test"
 version = "0.4.4"
 authors = [ "zo-el <joelulahanna@gmail.com>", "jetttech <lisa.jetton@holo.host>" ]
-edition = "2018"
+edition = "2021"
 
 [lib]
 name = "test"
@@ -13,3 +13,4 @@ hdk = "=0.0.126"
 serde = "1.0.104"
 thiserror = "1.0.22"
 paste = "1.0.5"
+test_integrity ={ path = "../test-integrity" }
