--- a/zomes/test/Cargo.toml
+++ b/zomes/test/Cargo.toml
@@ -9,8 +9,8 @@ name = "test"
 crate-type = [ "cdylib", "rlib" ]
 
 [dependencies]
-hdk = "=0.0.126"
-serde = "1.0.104"
+hdk = {version = "=0.0.138"}
+serde = "1.0"
 thiserror = "1.0.22"
 paste = "1.0.5"
 test_integrity ={ path = "../test-integrity" }
