--- a/zomes/test/Cargo.toml
+++ b/zomes/test/Cargo.toml
@@ -9,7 +9,7 @@ name = "test"
 crate-type = [ "cdylib", "rlib" ]
 
 [dependencies]
-hdk = {version = "=0.0.138"}
+hdk = "=0.0.138"
 serde = "1.0"
 thiserror = "1.0.22"
 paste = "1.0.5"
