--- a/dna.yaml
+++ b/dna.yaml
@@ -5,6 +5,9 @@ uuid: 9a28aac8-337c-11eb-adc1-0Z02acw20115
 properties: 
   skip_proof: false
 integrity:
+  origin_time: 2022-09-06T07:00:00.470323Z
+  network_seed: 00000000-0000-0000-0000-000000000000
+  properties: ~
   zomes:
     - name: test-integrity
       bundled: 'target/wasm32-unknown-unknown/release/test_integrity.wasm'
