--- a/dna.yaml
+++ b/dna.yaml
@@ -1,9 +1,6 @@
 ---
-manifest_version: "1"
+manifest_version: '1'
 name: test-dna
-uuid: 9a28aac8-337c-11eb-adc1-0Z02acw20115
-properties: 
-  skip_proof: false
 integrity:
   origin_time: 2022-09-06T07:00:00.470323Z
   network_seed: 00000000-0000-0000-0000-000000000000
@@ -14,6 +11,6 @@ integrity:
 coordinator:
   zomes:
     - name: test
-      bundled: "target/wasm32-unknown-unknown/release/test.wasm"
+      bundled: 'target/wasm32-unknown-unknown/release/test.wasm'
       dependencies:
         - name: test-integrity
