--- a/happ.yaml
+++ b/happ.yaml
@@ -1,7 +1,7 @@
 ---
-manifest_version: "1"
+manifest_version: '1'
 name: test-dna
-description: ""
+description: ''
 roles:
   - id: test
     provisioning:
