--- a/alternate-happ-configs/skip-proof/happ.yaml
+++ b/alternate-happ-configs/skip-proof/happ.yaml
@@ -1,9 +1,9 @@
 ---
 manifest_version: '1'
-name: test-dna
+name: test-happ
 description: ''
 roles:
-  - id: test
+  - name: test
     provisioning:
       strategy: create
       deferred: false
