--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./test.happ
+        asset_path: ./test-skip-proof.happ
         asset_name: test-skip-proof.happ
         asset_content_type: application/happ
