--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,13 +2,12 @@ name: Develop
 
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -16,26 +15,24 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - name: Fetch source code
-      uses: actions/checkout@v2
-    - name: Use Nix
-      uses: cachix/install-nix-action@v18
-      with:
-        install_url: https://releases.nixos.org/nix/nix-2.12.0/install
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Configure Nix substituters
-      run: |
-        set -xe
-        mkdir -p ~/.config/nix/
-        cp ./.github/nix.conf ~/.config/nix/
-    - name: Use cachix
-      uses: cachix/cachix-action@v10
-      with:
-        name: holochain-ci
-    - name: Prepare Nix environment
-      run: nix-shell --command "echo Completed"
-    - name: Run all tests
-      run: nix-shell --run 'make test'
+      - name: Fetch source code
+        uses: actions/checkout@v2
+      - name: Use Nix
+        uses: cachix/install-nix-action@v18
+        with:
+          install_url: https://releases.nixos.org/nix/nix-2.12.0/install
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Configure Nix substituters
+        run: |
+          set -xe
+          mkdir -p ~/.config/nix/
+          cp ./.github/nix.conf ~/.config/nix/
+      - name: Use cachix
+        uses: cachix/cachix-action@v10
+        with:
+          name: holochain-ci
+      - name: Run all tests
+        run: make nix-test
