--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: Develop
+name: CI
 
 on:
   push:
@@ -6,33 +6,85 @@ on:
   pull_request:
     branches: [main, develop]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
+jobs:
+  lints:
+    name: Lints
+    timeout-minutes: 50
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: ⚡ Restore cache
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            .cargo
+            target
+          key: ${{ runner.os }}-build-happ-${{ hashFiles('Cargo.lock') }}
+
+      - name: 🔨 Install toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: rustfmt, clippy
+
+      - name: 🔎 Run cargo fmt
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
+
+  test:
+    runs-on: ubuntu-latest
+    needs:
+      - lints
     strategy:
       matrix:
         node-version: [14.x]
-
     steps:
       - name: Fetch source code
-        uses: actions/checkout@v2
-      - name: Use Nix
-        uses: cachix/install-nix-action@v18
+        uses: actions/checkout@v3
+
+      - name: Install nix
+        uses: cachix/install-nix-action@v22
+
+      - name: Set up cachix
+        uses: cachix/cachix-action@v12
         with:
-          install_url: https://releases.nixos.org/nix/nix-2.12.0/install
+          name: holochain-ci
+
+      - name: Build Nix packages
+        run: nix develop -c $SHELL -c "echo Nix packages built"
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Configure Nix substituters
-        run: |
-          set -xe
-          mkdir -p ~/.config/nix/
-          cp ./.github/nix.conf ~/.config/nix/
-      - name: Use cachix
-        uses: cachix/cachix-action@v10
+
+      - name: Restore zome build
+        uses: actions/cache/restore@v3
         with:
-          name: holochain-ci
-      - name: Run all tests
+          path: |
+            .cargo
+            target
+          key: ${{ runner.os }}-build-happ-${{ hashFiles('Cargo.lock') }}
+
+      - name: 🔎 Build happ
+        run: make nix-build
+
+      - name: Save build to cache
+        uses: actions/cache/save@v3
+        with:
+          path: |
+            .cargo
+            target
+          key: ${{ runner.os }}-build-happ-${{ hashFiles('Cargo.lock') }}
+
+      - name: 🔎 Run all tests
         run: make nix-test
