--- a/zomes/test/Cargo.toml
+++ b/zomes/test/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test"
-version = "0.5.0"
+version = "0.5.1"
 authors = [ "zo-el <joelulahanna@gmail.com>", "jetttech <lisa.jetton@holo.host>" ]
 edition = "2021"
 
@@ -9,8 +9,7 @@ name = "test"
 crate-type = [ "cdylib", "rlib" ]
 
 [dependencies]
-hdk = "=0.3.0-beta-dev.5"
+hdk = "=0.2.2-beta-rc.0"
 serde = "1.0"
 thiserror = "1.0.22"
-paste = "1.0.5"
 test_integrity ={ path = "../test-integrity" }
