--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ opt-level = "z"
 
 
 [workspace.dependencies]
-hdi = "=0.4.0-beta-dev.31"
-hdk = "=0.3.0-beta-dev.35"
+hdi = "=0.5.0-dev.2"
+hdk = "=0.4.0-dev.2"
 serde = "1"
